--- a/AutoCode/AutoCode.csproj
+++ b/AutoCode/AutoCode.csproj
@@ -78,13 +78,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CodeCreatorFactory.cs" />
+    <Compile Include="CodeCreator\Factory\BLLCreatorFactory.cs" />
+    <Compile Include="CodeCreator\Factory\DALCreatorFactory.cs" />
+    <Compile Include="CodeCreator\Factory\InterfaceCreatorFactory.cs" />
+    <Compile Include="CodeCreator\Java\CreatorBase.cs" />
+    <Compile Include="CodeCreator\Java\EntityCreator.cs" />
+    <Compile Include="CodeLanType.cs" />
     <Compile Include="CodeCreator\CodeCreatorBase.cs" />
+    <Compile Include="CodeCreator\CodeCreatorFactoryBase.cs" />
     <Compile Include="CodeCreator\CSharp\BLLCreator.cs" />
-    <Compile Include="CodeCreator\CSharp\CSharpCreatorBase.cs" />
+    <Compile Include="CodeCreator\CSharp\CreatorBase.cs" />
     <Compile Include="CodeCreator\CSharp\DALCreator.cs" />
     <Compile Include="CodeCreator\CSharp\EntityCreator.cs" />
     <Compile Include="CodeCreator\CSharp\InterfaceCreator.cs" />
+    <Compile Include="CodeCreator\Factory\EntityCreatorFactory.cs" />
     <Compile Include="CodeCreator\ICodeCreator.cs" />
+    <Compile Include="CodeCreator\ICodeCreatorFactory.cs" />
+    <Compile Include="CodeGenType.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="ConfigManager.cs" />
     <Compile Include="ConnToDbForm.cs">
@@ -99,6 +110,8 @@
     <Compile Include="DbColumn.cs" />
     <Compile Include="DbFactory\DbFactoryBase.cs" />
     <Compile Include="GenNames.cs" />
+    <Compile Include="ISqlCreatorFactory.cs" />
+    <Compile Include="SqlCreator\ISqlBatchCreator.cs" />
     <Compile Include="Utils\DbHelper.cs" />
     <Compile Include="Entity\ColumnNameEntity.cs" />
     <Compile Include="Entity\DatabaseNameEntity.cs" />
@@ -122,7 +135,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpecificSql\SpecificSqlBase.cs" />
-    <Compile Include="SqlCreator\SqlCreatorBase.cs" />
+    <Compile Include="SqlCreator\ISqlCreator.cs" />
     <Compile Include="SqlCreatorFactory.cs" />
     <Compile Include="Utils\StringExt.cs" />
     <Compile Include="Utils\Tools.cs" />
@@ -182,9 +195,7 @@
   <ItemGroup>
     <Reference Include="MySql.Data, Version=6.9.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="CodeCreator\Java\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
